# cartridge

./: .buildinfo  .gitignore  .hgignore  .hgtags  .releaserc  .travis.yml  AUTHORS  CHANGELOG  CNAME  LICENSE  MANIFEST.in  README.rst  SECURITY.md  clean.py  colophon.html  components.html  configuration.html  genindex.html  git.config.sh  index.html  integration.html  manage.py  model-graph.html  objects.inv  order_form_fields.html  order_model_fields.html  overview.html  pyproject.toml  pytest.ini  runtests.py  search.html  searchindex.js  settings.py  setup.cfg  setup.py  tox.ini  urls.py
.doctrees/: colophon.doctree  components.doctree  configuration.doctree  environment.pickle  index.doctree  integration.doctree  model-graph.doctree  order_form_fields.doctree  order_model_fields.doctree  overview.doctree
.github/workflows/: main.yml
.tx/: config
_sources/: configuration.rst.txt  order_model_fields.rst.txt
apps/shop/: __init__.py  admin.py  cart.py  checkout.py  context_processors.py  exceptions.py  fields.py  forms.py  managers.py  middleware.py  models.py  settings.py  tests.py  urls.py  utils.py  views.py
cartridge/: __init__.py
cartridge/shop/: admin.py  (+16 more)
deploy/: environment.py  modpython.py  wsgi.py
docs/: Makefile  colophon.rst  components.rst  conf.py  configuration.rst  docs_settings.py  index.rst  integration.rst  make.bat  model-graph.rst  order_form_fields.rst  order_model_fields.rst  overview.rst  settings.rst  utilities.rst  views_and_templates.rst
host_settings/: cartridge_anna.py  cartridge_smcdonald.py  shop_project_anna.py
scripts/: create_test_products.py
templates/: index.html
tests/: conftest.py  test_shop.py
(+213 files in other folders)
