[metadata]
name = Cartridge
version = attr: cartridge.__version__
description = A Django shopping cart application.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Stephen McDonald
author_email = stephen.mc@gmail.com
url = http://cartridge.jupo.org/
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.7
packages = cartridge
include_package_data = true
install_requires =
    mezzanine >= 6, < 7
    xhtml2pdf

[options.extras_require]
stripe = stripe
testing =
    pytest-django >= 4, < 5
    pytest-cov >= 2, < 3
codestyle =
    flake8 >= 3, < 4
    black == 22.3.0
    isort >= 5, < 6
    pyupgrade >= 2, < 3
